--- a/index.html
+++ b/index.html
@@ -8,24 +8,25 @@
   <p>If the widget is set up correctly, you should see the chat bubble in the corner.</p>
 
   <!-- Salesforce Messaging Snippet -->
-  <script type='text/javascript'>
-	function initEmbeddedMessaging() {
-		try {
-			embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+<script type='text/javascript'>
+      function initEmbeddedMessaging() {
+          try {
+              embeddedservice_bootstrap.settings.language = 'en_US';
 
-			embeddedservice_bootstrap.init(
-				'00DEc00000GfZ2M',
-				'CU_Enhanced_Messaging_Visitor_Center_Agents',
-				'https://strategiced--qasf.sandbox.my.site.com/ESWCUEnhancedMessaging1759815402983',
-				{
-					scrt2URL: 'https://strategiced--qasf.sandbox.my.salesforce-scrt.com'
-				}
-			);
-		} catch (err) {
-			console.error('Error loading Embedded Messaging: ', err);
-		}
-	};
-</script>
-  <script src="https://strategiced--qasf.sandbox.my.site.com/ESWCUEnhancedMessaging1759815402983/assets/js/bootstrap.min.js" async></script>
+              embeddedservice_bootstrap.init(
+                  '00DEc00000GfZ2M',
+                  'CU_Enhanced_Messaging_Visitor_Center_Agents',
+                  'https://strategiced--qasf.sandbox.my.site.com/ESWCUEnhancedMessaging1759815402983',
+                  {
+                      scrt2URL: 'https://strategiced--qasf.sandbox.my.salesforce-scrt.com'
+                  }
+              );
+          } catch (err) {
+              console.error('Error loading Embedded Messaging: ', err);
+          }
+      }
+  </script>
+  <script type='text/javascript' src='https://strategiced--qasf.sandbox.my.site.com/ESWCUEnhancedMessaging1759815402983/assets/js/bootstrap.min.js' 
+  onload='initEmbeddedMessaging()'></script>
 </body>
 </html>
