--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 		}
 	};
 </script>
-<script type='text/javascript' src='https://strategiced--qasf.sandbox.my.site.com/ESWtestembed1760850249724/assets/js/bootstrap.min.js'></script>
+<script type='text/javascript' src='https://strategiced--qasf.sandbox.my.site.com/ESWtestembed1760850249724/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 </body>
 </html>
