--- a/index.html
+++ b/index.html
@@ -408,11 +408,17 @@
         console.log('🚀 Initializing Salesforce Embedded Messaging...');
         embeddedservice_bootstrap.settings.language = 'en_US';
         embeddedservice_bootstrap.init(
-          '00DEc00000GfZ2M',
-          'test_embed',
-          'https://strategiced--qasf.sandbox.my.site.com/ESWtestembed1760850249724',
-          { scrt2URL: 'https://strategiced--qasf.sandbox.my.salesforce-scrt.com' }
-        );
+				'00DEc00000GfZ2M',
+				'Embedded_Deployment_admission_for_Github',
+				'https://strategiced--qasf.sandbox.my.site.com/ESWEmbeddedDeploymentad1761917017154',
+				{
+					scrt2URL: 'https://strategiced--qasf.sandbox.my.salesforce-scrt.com'
+				}
+			);
+		} catch (err) {
+			console.error('Error loading Embedded Messaging: ', err);
+		}
+	};
         
         // Timeout fallback - if chat doesn't initialize properly within 45 seconds
         setTimeout(() => {
@@ -777,7 +783,7 @@
 
   <!-- Salesforce bootstrap -->
   <script
-    src="https://strategiced--qasf.sandbox.my.site.com/ESWtestembed1760850249724/assets/js/bootstrap.min.js"
+    src="https://strategiced--qasf.sandbox.my.site.com/ESWEmbeddedDeploymentad1761917017154/assets/js/bootstrap.min.js"
     onload="initEmbeddedMessaging()"
     onerror="showFallback('bootstrap failed to load')"
   ></script>
